<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_input_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_input_number"
        android:textAllCaps="true"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/input_first_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_input_number"
        android:layout_marginTop="16dp"
        android:hint="@string/input_first_number"
        android:inputType="number" />

    <EditText
        android:id="@+id/input_second_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_first_number"
        android:layout_marginTop="16dp"
        android:hint="@string/input_first_number"
        android:inputType="number"/>

    <Button
        android:id="@+id/button_add"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_below="@id/input_second_number"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp"
        android:layout_width="80dp"
        android:layout_marginStart="5dp"/>

    <Button
        android:id="@+id/button_subtract"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/subtract"
        android:layout_alignBaseline="@id/button_add"
        android:layout_alignBottom="@+id/button_add"
        android:layout_toEndOf="@id/button_add"
        android:layout_marginStart="5dp"/>

    <Button
        android:id="@+id/button_multiply"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/button_divide"
        android:layout_alignBottom="@+id/button_divide"
        android:layout_toStartOf="@id/button_divide"
        android:layout_marginEnd="5dp"
        android:text="@string/mulitply"/>

    <Button
        android:id="@+id/button_divide"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_reset"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="5dp"
        android:text="@string/divide" />

    <Button
        android:id="@+id/button_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_add"
        android:layout_alignParentEnd="true"
        android:text="@string/reset"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"/>

    <TextView
        android:id="@+id/text_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_reset"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp"
        android:text="@string/text_result"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="normal|bold"
        android:textColor="@color/black"/>


</RelativeLayout>